# simpleGPT

./: .gitignore  README.md  pyproject.toml
configs/: base.toml  shakespeare.toml  shakespeare_char.toml
src/simplegpt/: data.py  inference.py  model.py  train.py  utils.py
